# moving-towerblockx

./: .gitignore  Cargo.toml  README.md  index.html  serve.js  vercel.json
pkg/: tetris3d.js  tetris3d_bg.wasm
src/: app.rs  lib.rs  main.rs
src/game/: mod.rs
src/render/: camera.rs  cube.rs  gpu.rs  instance.rs  mod.rs  pipeline.rs  scene.rs
src/shaders/: cube.wgsl  post.wgsl
